Display full image height

--- a/style.css
+++ b/style.css
@@ -30,7 +30,6 @@
     --size-500: 1.5rem;
     --size-600: 2rem;
     --size-700: 21.4375rem;
-    --size-800: 27.75rem;
     --size-900: 37.5rem;
 }
 
@@ -98,10 +97,9 @@ body {
     .product {
         flex-direction: row;
         width: var(--size-900);
-        height: var(--size-800);
     }
 
-    picture, .product-image {
+    .product-image {
         border-radius: var(--size-300) 0 0 var(--size-300);
     }
 
